--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIS Summary learning site</title>
-    <link rel="icon" type="image/x-icon" href="/IMG/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="IMG/favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 
