--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="system_chapter1" class="Card hover" href="">
+                    <a id="system_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/System-Analysis-1-ch1/">
                         <div class="card">
                             <img src="IMG/sa.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
@@ -225,7 +225,7 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="production_chapter1" class="Card hover" href="/Production-Operation-Management/CH1/index.html">
+                    <a id="production_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Production-Ch1/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
