--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>BIS Summary learning site</h1>
         </div>
         <div class="menu-btn">
-            <button class="home-button"  id="toggleButton" onclick="toggleSidebar()" > ☰ </button>
+            <button class="home-button" id="toggleButton" onclick="toggleSidebar()"> ☰ </button>
         </div>
     </nav>
 
@@ -26,7 +26,7 @@
         <div class="sidebar">
             <div class="sidebar-links">
                 <a href="index.html">Home</a>
-                <h3 style="color: red;">Course Name</h3> 
+                <h3 style="color: red;">Course Name</h3>
                 <ul class="sub-menu-side-bar">
                     <li><a href="#Programming" onclick="closeSidebar()">Programming 1</a></li>
                     <li><a href="#Partner" onclick="closeSidebar()">Partnership</a></li>
@@ -45,28 +45,28 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="programming_chapter1" class="Card hover" href="">
+                    <a id="programming_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter2" class="Card hover" href="">
+                    <a id="programming_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter3" class="Card hover" href="">
+                    <a id="programming_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter4" class="Card hover" href="">
+                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
@@ -81,28 +81,28 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="partner_chapter1" class="Card hover" href="">
+                    <a id="partner_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/part.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="partner_chapter2" class="Card hover" href="">
+                    <a id="partner_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/part.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="partner_chapter3" class="Card hover" href="">
+                    <a id="partner_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/part.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="partner_chapter4" class="Card hover" href="">
+                    <a id="partner_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/part.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
@@ -117,28 +117,28 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="stat_chapter1" class="Card hover" href="">
+                    <a id="stat_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/stat.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="stat_chapter2" class="Card hover" href="">
+                    <a id="stat_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/stat.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="stat_chapter3" class="Card hover" href="">
+                    <a id="stat_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/stat.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="stat_chapter4" class="Card hover" href="">
+                    <a id="stat_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/stat.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
@@ -153,28 +153,29 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="system_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/System-Analysis-1-ch1/">
+                    <a id="system_chapter1" class="Card hover"
+                        href="https://ahmedhossam911.github.io/System-Analysis-1-ch1/">
                         <div class="card">
                             <img src="IMG/sa.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="system_chapter2" class="Card hover" href="">
+                    <a id="system_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/sa.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="system_chapter3" class="Card hover" href="">
+                    <a id="system_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/sa.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="system_chapter4" class="Card hover" href="">
+                    <a id="system_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/sa.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
@@ -189,28 +190,28 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="english_chapter1" class="Card hover" href="">
+                    <a id="english_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="english_chapter2" class="Card hover" href="">
+                    <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="english_chapter3" class="Card hover" href="">
+                    <a id="english_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="english_chapter4" class="Card hover" href="">
+                    <a id="english_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
@@ -225,28 +226,29 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="production_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Production-Ch1/">
+                    <a id="production_chapter1" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Production-Ch1/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="production_chapter2" class="Card hover" href="">
+                    <a id="production_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="production_chapter3" class="Card hover" href="">
+                    <a id="production_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="production_chapter4" class="Card hover" href="">
+                    <a id="production_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
