--- a/index.html
+++ b/index.html
@@ -39,25 +39,23 @@
         </div>
     </aside>
 
+    <div id="popupContainer">
+        <div id="popupContent">
+            <span onclick="closePopup()" class="close">&times;</span>
+            <h2 style="font-weight: bold; text-align: center;">Hello Our Friend</h2>
+            <h3>See new updates❤️👀</h3>
+            <ol style="font-weight: bold;">
+                <li>Chapter 1 Production Course Updated "Full content"</li>
+                <li>Chapter 1 System Analysis 1 Course Updated</li>
+            </ol>
+        </div>
+    </div>
+
     <section>
         <div class="Programming" id="Programming">
             <h2>Programming 1</h2>
             <div class="carousel-container">
                 <div class="carousel">
-
-                    <a id="programming_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
-                        <div class="card">
-                            <img src="IMG/pro.jpg" alt="Image 1">
-                            <h2>Chapter 1</h2>
-                        </div>
-                    </a>
-
-                    <a id="programming_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
-                        <div class="card">
-                            <img src="IMG/pro.jpg" alt="Image 2">
-                            <h2>Chapter 2</h2>
-                        </div>
-                    </a>
 
                     <a id="programming_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
@@ -72,6 +70,28 @@
                             <h2>Chapter 4</h2>
                         </div>
                     </a>
+
+                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                        <div class="card">
+                            <img src="IMG/pro.jpg" alt="Image 2">
+                            <h2>Chapter 5</h2>
+                        </div>
+                    </a>
+
+                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                        <div class="card">
+                            <img src="IMG/pro.jpg" alt="Image 2">
+                            <h2>Chapter 6</h2>
+                        </div>
+                    </a>
+
+                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                        <div class="card">
+                            <img src="IMG/pro.jpg" alt="Image 2">
+                            <h2>Chapter 7</h2>
+                        </div>
+                    </a>
+
                 </div>
             </div>
         </div>
@@ -193,28 +213,28 @@
                     <a id="english_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 1">
-                            <h2>Chapter 1</h2>
+                            <h2>Lecture 1</h2>
                         </div>
                     </a>
 
                     <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
-                            <h2>Chapter 2</h2>
+                            <h2>Lecture 2</h2>
                         </div>
                     </a>
 
                     <a id="english_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
-                            <h2>Chapter 3</h2>
+                            <h2>Lecture 3</h2>
                         </div>
                     </a>
 
                     <a id="english_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
-                            <h2>Chapter 4</h2>
+                            <h2>Lecture 4</h2>
                         </div>
                     </a>
                 </div>
