--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </aside>
 
-    <!-- <div id="popupContainer">
+    <div id="popupContainer">
         <div id="popupContent">
             <span onclick="closePopup()" class="close">&times;</span>
             <h2 style="font-weight: bold; text-align: center;">Hello Our Friend</h2>
@@ -49,7 +49,7 @@
                 <li>Chapter 1 System Analysis 1 Course Updated</li>
             </ol>
         </div>
-    </div> -->
+    </div>
 
     <section>
         <div class="Programming" id="Programming">
