--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <h2 style="font-weight: bold; text-align: center;">Hello Our Friend</h2>
             <h3>See new updates❤️👀</h3>
             <ol style="font-weight: bold;">
-                <li>Chapter 1 Production Course Updated "Full content"</li>
-                <li>Chapter 1 System Analysis 1 Course Updated</li>
+                <li>Chapter 1 & 2 Programming Content + Book </li>
             </ol>
         </div>
     </div>
@@ -56,6 +55,20 @@
             <h2>Programming 1</h2>
             <div class="carousel-container">
                 <div class="carousel">
+
+                    <a id="programming_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch1/">
+                        <div class="card">
+                            <img src="IMG/pro.jpg" alt="Image 2">
+                            <h2>Chapter 1</h2>
+                        </div>
+                    </a>
+
+                    <a id="programming_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch2/">
+                        <div class="card">
+                            <img src="IMG/pro.jpg" alt="Image 2">
+                            <h2>Chapter 2</h2>
+                        </div>
+                    </a>
 
                     <a id="programming_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
@@ -71,26 +84,26 @@
                         </div>
                     </a>
 
-                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <!-- <a id="programming_chapter5" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 5</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="programming_chapter6" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 6</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="programming_chapter7" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 7</h2>
                         </div>
-                    </a>
+                    </a> -->
 
                 </div>
             </div>
