--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <h2 style="font-weight: bold; text-align: center;">Hello Our Friend</h2>
             <h3>See new updates❤️👀</h3>
             <ol style="font-weight: bold;">
-                <li>Chapter 1 & 2 Programming Content + Book </li>
+                <li>Chapter 3 & 4 Programming Content + Viedo +Book </li>
+                <li>Content For Partnership (Chapter 1,2 & 3) Will Be available In 11/11/2023</li>
+                <li>Content For System Analysis (Chapter 1) Will Be available In 11/11/2023 </li>
             </ol>
         </div>
     </div>
@@ -70,14 +72,14 @@
                         </div>
                     </a>
 
-                    <a id="programming_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="programming_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch3/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch4/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
