--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
             <h2 style="font-weight: bold; text-align: center;">Hello Our Friend</h2>
             <h3>See new updates❤️👀</h3>
             <ol style="font-weight: bold;">
-                <li>Chapter 3 & 4 Programming Content + Viedo +Book </li>
-                <li>Content For Partnership (Chapter 1,2 & 3) Will Be available In 11/11/2023</li>
-                <li>Content For System Analysis (Chapter 1) Will Be available In 11/11/2023 </li>
+                <li>Content For Partnership (Chapter 1,2 & 3) available Now</li>
+                <li>Content For Production (Chapter 1,2,3 & 4) available Now</li>
+                <li>Content For English (Lecture 1,2 & 3) available Now</li>
+                <li>Content For System Analysis (Chapter 1) available Now </li>
             </ol>
         </div>
     </div>
@@ -58,28 +59,32 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="programming_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch1/">
+                    <a id="programming_chapter1" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Programming-Ch1/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch2/">
+                    <a id="programming_chapter2" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Programming-Ch2/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch3/">
+                    <a id="programming_chapter3" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Programming-Ch3/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="programming_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Programming-Ch4/">
+                    <a id="programming_chapter4" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Programming-Ch4/">
                         <div class="card">
                             <img src="IMG/pro.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
@@ -116,21 +121,24 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="partner_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="partner_chapter1" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Partnership-Ch1/">
                         <div class="card">
                             <img src="IMG/part.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
                         </div>
                     </a>
 
-                    <a id="partner_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="partner_chapter2" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Partnership-Ch2/">
                         <div class="card">
                             <img src="IMG/part.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="partner_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="partner_chapter3" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Partnership-Ch3/">
                         <div class="card">
                             <img src="IMG/part.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
@@ -152,7 +160,7 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="stat_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="stat_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Statistics-Ch1/">
                         <div class="card">
                             <img src="IMG/stat.jpg" alt="Image 1">
                             <h2>Chapter 1</h2>
@@ -225,21 +233,21 @@
             <div class="carousel-container">
                 <div class="carousel">
 
-                    <a id="english_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="english_chapter1" class="Card hover" href="https://ahmedhossam911.github.io/English-Lec1/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 1">
                             <h2>Lecture 1</h2>
                         </div>
                     </a>
 
-                    <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Production-Ch2/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
                             <h2>Lecture 2</h2>
                         </div>
                     </a>
 
-                    <a id="english_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="english_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/English-Lec3/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
                             <h2>Lecture 3</h2>
@@ -269,21 +277,24 @@
                         </div>
                     </a>
 
-                    <a id="production_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="production_chapter2" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Production-Ch2/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 2">
                             <h2>Chapter 2</h2>
                         </div>
                     </a>
 
-                    <a id="production_chapter3" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="production_chapter3" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Production-Ch3/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 2">
                             <h2>Chapter 3</h2>
                         </div>
                     </a>
 
-                    <a id="production_chapter4" class="Card hover" href="https://ahmedhossam911.github.io/Soon-Msg/">
+                    <a id="production_chapter4" class="Card hover"
+                        href="https://ahmedhossam911.github.io/Production-Ch4/">
                         <div class="card">
                             <img src="IMG/prod copy.jpg" alt="Image 2">
                             <h2>Chapter 4</h2>
