--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         </div>
                     </a>
 
-                    <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Production-Ch2/">
+                    <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/English-Lec2/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
                             <h2>Lecture 2</h2>
