--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
             <h2 style="font-weight: bold; text-align: center;">Hello Our Friend</h2>
             <h3>See new updates❤️👀</h3>
             <ol style="font-weight: bold;">
-                <li>Content For Partnership (Chapter 1,2 & 3) available Now</li>
-                <li>Content For Production (Chapter 1,2,3 & 4) available Now</li>
-                <li>Content For English (Lecture 1,2 & 3) available Now</li>
-                <li>Content For System Analysis (Chapter 1) available Now </li>
+                <li>Video For Chapter 1 Production Is available Now</li>
             </ol>
         </div>
     </div>
@@ -240,7 +237,7 @@
                         </div>
                     </a>
 
-                    <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/English-Lec2/">
+                    <a id="english_chapter2" class="Card hover" href="https://ahmedhossam911.github.io/Production-Ch2/">
                         <div class="card">
                             <img src="IMG/English.jpg" alt="Image 2">
                             <h2>Lecture 2</h2>
